--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,21 @@
     <title>AssecorAssessmentFrontend</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="preload"
+      href="/fonts/Roboto-VariableFont_wdth,wght.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+      fetchpriority="high"
+    />
+    <link
+      rel="prefetch"
+      href="/fonts/circular-std-medium-500.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
